fixed posts not being aligned.

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,37 +12,63 @@ header {
 
 header h1 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 0%;
+    padding-left: 0%;
 }
 
 .login-button{
-    margin-left: 76%;
+    margin-left: 82%;
 }
 
 a {
     text-decoration: none;
-    color: darkblue;
+    color: white;
+}
+
+body {
+    background: #dbdbdbcc;
 }
 
 .post {
     display: flex;
     max-width: 75%;
-    max-height: max-content;
+    max-height: 250px;
     border: 1px solid black;
     margin-top: 3%;
     margin-right: 12.5%;
     margin-left: 12.5%;
     flex: 1 0 auto;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
+    align-content: flex-start;
 }
 
-#title, #img, #ingredients, #recipe, #commentary, #user {   
+#title, #ingredients, #recipe, #commentary, #user {   
+    max-width: 75%;
+    max-height: 36px;
+    margin-top: 9px;
+    margin-bottom: 0px;
+}
+
+#title, #ingredients, #recipe, #commentary, #user, #img {  
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    height: 100%;
+    width: 100%;
+}
+
+img {
+    position: relative;
+    margin: 1% 1% 1% 1%;
     max-width: 20%;
-    margin: 0 0% 0 0;
+    max-height: 20%;
+    min-width: 20%;
+    min-height: 20%;
+    align-self: flex-start;
 }
 
 #ingredients, #recipe, #commentary {
+
 }
 
 .post #user {
@@ -51,6 +77,7 @@ a {
 .post #title {
     min-width: max-content;
     max-height: 36px;
+    margin-right: 50%;
 }
 
 .a404 {
